fix: correct regex pattern for conventional commits parsing
- Fix malformed regex in bash extended regex pattern
- Change \? to proper optional group syntax (\([^)]+\))?
- Remove unnecessary backslash before space

--- a/.github/workflows/commitlint-fix.yml
+++ b/.github/workflows/commitlint-fix.yml
@@ -65,7 +65,7 @@ jobs:
 
             # Check if commit follows conventional commits
             # Valid types: feat, fix, docs, refactor, perf, test, chore, ci, style, deps
-            if [[ "$FIRST_LINE" =~ ^(feat|fix|docs|refactor|perf|test|chore|ci|style|deps)\(([^)]+)\)\?:\ .+ ]]; then
+            if [[ "$FIRST_LINE" =~ ^(feat|fix|docs|refactor|perf|test|chore|ci|style|deps)(\([^)]+\))?: .+ ]]; then
               # Extract description after colon
               DESCRIPTION=$(echo "$FIRST_LINE" | cut -d':' -f2- | sed 's/^ *//')
 
