fix: set NEEDS_FIX flag when subject case is invalid
- Bug was causing commits with uppercase descriptions to not be fixed
- Set NEEDS_FIX=true alongside INVALID_SUBJECT=true to ensure fix step runs

--- a/.github/workflows/commitlint-fix.yml
+++ b/.github/workflows/commitlint-fix.yml
@@ -75,6 +75,7 @@ jobs:
               else
                 echo "❌ Invalid subject case: $FIRST_LINE"
                 INVALID_SUBJECT=true
+                NEEDS_FIX=true
 
                 # Fix the subject case
                 TYPE=$(echo "$FIRST_LINE" | cut -d':' -f1)
