--- a/.github/workflows/dotnet-format-autofix.yml
+++ b/.github/workflows/dotnet-format-autofix.yml
@@ -8,7 +8,7 @@ on:
 
 concurrency:
   group: dotnet-format-autofix
-  cancel-in-progress: false
+  cancel-in-progress: true
 
 permissions:
   contents: write
@@ -18,6 +18,7 @@ env:
   DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
   DOTNET_NOLOGO: true
   DOTNET_CLI_TELEMETRY_OPTOUT: 1
+  AUTOFIX_REVIEWERS: ${{ vars.AUTOFIX_REVIEWERS }}
 
 jobs:
   format:
@@ -88,6 +89,7 @@ jobs:
 
       - name: Create or update PR
         if: steps.changes.outputs.has_changes == 'true'
+        id: pr
         uses: actions/github-script@v7
         with:
           script: |
@@ -124,6 +126,7 @@ jobs:
                 title,
                 body
               });
+              core.setOutput('pull_number', String(pr.number));
               return;
             }
 
@@ -137,14 +140,72 @@ jobs:
               body
             });
 
-            await github.rest.issues.addLabels({
-              owner,
-              repo,
-              issue_number: created.data.number,
-              labels: ['chore', 'autofix', 'formatting']
-            });
+            core.setOutput('pull_number', String(created.data.number));
+
+            try {
+              await github.rest.issues.addLabels({
+                owner,
+                repo,
+                issue_number: created.data.number,
+                labels: ['chore', 'autofix', 'formatting']
+              });
+            } catch (e) {
+              core.warning(`Could not apply labels to PR #${created.data.number}: ${e.message}`);
+            }
+
+      - name: Request review and enable auto-merge
+        if: steps.changes.outputs.has_changes == 'true' && steps.pr.outputs.pull_number != ''
+        uses: actions/github-script@v7
+        env:
+          PULL_NUMBER: ${{ steps.pr.outputs.pull_number }}
+        with:
+          script: |
+            const owner = context.repo.owner;
+            const repo = context.repo.repo;
+            const pull_number = Number(process.env.PULL_NUMBER);
+
+            if (!Number.isFinite(pull_number) || pull_number <= 0) {
+              core.warning(`Invalid PULL_NUMBER: ${process.env.PULL_NUMBER}`);
+              return;
+            }
+
+            const reviewers = (process.env.AUTOFIX_REVIEWERS || '')
+              .split(',')
+              .map(s => s.trim())
+              .filter(Boolean);
+
+            const requestedReviewers = reviewers.length > 0 ? reviewers : [owner];
+
+            try {
+              await github.rest.pulls.requestReviewers({
+                owner,
+                repo,
+                pull_number,
+                reviewers: requestedReviewers
+              });
+              core.info(`Requested review from: ${requestedReviewers.join(', ')}`);
+            } catch (e) {
+              core.warning(`Could not request reviewers for PR #${pull_number}: ${e.message}`);
+            }
+
+            try {
+              const pr = await github.rest.pulls.get({ owner, repo, pull_number });
+              const pullRequestId = pr.data.node_id;
+
+              await github.graphql(
+                `mutation EnableAutoMerge($pullRequestId: ID!, $mergeMethod: PullRequestMergeMethod!) {
+                  enablePullRequestAutoMerge(input: { pullRequestId: $pullRequestId, mergeMethod: $mergeMethod }) {
+                    pullRequest { number }
+                  }
+                }`,
+                { pullRequestId, mergeMethod: 'SQUASH' }
+              );
+
+              core.info(`Enabled auto-merge (SQUASH) for PR #${pull_number}`);
+            } catch (e) {
+              core.warning(`Could not enable auto-merge for PR #${pull_number}: ${e.message}`);
+            }
 
       - name: No changes
         if: steps.changes.outputs.has_changes == 'false'
         run: echo "No formatting changes detected."
-
