--- a/.github/workflows/commitlint-fix.yml
+++ b/.github/workflows/commitlint-fix.yml
@@ -17,7 +17,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -194,11 +194,11 @@ jobs:
                 '**Action taken** — All non-compliant commits have been fixed to follow the conventional commits format.',
                 '',
                 '**Changes made:**',
-                \"- Subject lines are now lowercase (except 'deps' type)\",
+                "- Subject lines are now lowercase (except 'deps' type)",
                 '- Types are now one of: `feat`, `fix`, `docs`, `refactor`, `perf`, `test`, `chore`, `ci`, `style`, or `deps`',
                 '',
                 'The PR branch has been force-pushed with the fixed commits. If you had local changes, you may need to `git pull --rebase`.'
-              ].join('\\n')
+              ].join('\n')
             });
 
   handle-dependabot:
@@ -209,7 +209,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
@@ -287,9 +287,13 @@ jobs:
       - name: Comment on PR
         if: steps.check-needs-fix.outputs.needs_fix == 'true'
         uses: actions/github-script@v7
+        env:
+          ORIGINAL_SUBJECT: ${{ steps.get-commit.outputs.first_line }}
+          NEW_SUBJECT: ${{ steps.check-needs-fix.outputs.new_subject }}
         with:
           script: |
-            const newSubject = `${{ steps.check-needs-fix.outputs.new_subject }}`;
+            const originalSubject = process.env.ORIGINAL_SUBJECT ?? '';
+            const newSubject = process.env.NEW_SUBJECT ?? '';
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
@@ -301,9 +305,9 @@ jobs:
                 '',
                 '**Action taken** — Fixed the subject line to be lowercase.',
                 '',
-                `**Original:** \\`${{ steps.get-commit.outputs.first_line }}\\``,
-                `**Fixed:** \\`${newSubject}\\``,
+                '**Original:** `' + '`' + originalSubject + '`',
+                '**Fixed:** ' + '`' + newSubject + '`',
                 '',
                 'The PR branch has been force-pushed with the fixed commit.'
-              ].join('\\n')
+              ].join('\n')
             });
