ci: use bot identity for signed commits

--- a/.github/workflows/commitlint-fix.yml
+++ b/.github/workflows/commitlint-fix.yml
@@ -19,6 +19,8 @@ jobs:
     env:
       AUTOFIX_GPG_PRIVATE_KEY: ${{ secrets.AUTOFIX_GPG_PRIVATE_KEY }}
       AUTOFIX_GPG_PASSPHRASE: ${{ secrets.AUTOFIX_GPG_PASSPHRASE }}
+      AUTOFIX_BOT_NAME: AiDotNetAutofixBot
+      AUTOFIX_BOT_EMAIL: autofix-bot@ooples.com
 
     steps:
       - name: Checkout code
@@ -39,9 +41,16 @@ jobs:
           git_commit_gpgsign: true
 
       - name: Configure Git
+        env:
+          AUTOFIX_PAT: ${{ secrets.AUTOFIX_PAT }}
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          if [ -n "$AUTOFIX_PAT" ]; then
+            git config user.name "$AUTOFIX_BOT_NAME"
+            git config user.email "$AUTOFIX_BOT_EMAIL"
+          else
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+          fi
 
       - name: Get commits to check
         id: get-commits
@@ -254,6 +263,8 @@ jobs:
     env:
       AUTOFIX_GPG_PRIVATE_KEY: ${{ secrets.AUTOFIX_GPG_PRIVATE_KEY }}
       AUTOFIX_GPG_PASSPHRASE: ${{ secrets.AUTOFIX_GPG_PASSPHRASE }}
+      AUTOFIX_BOT_NAME: AiDotNetAutofixBot
+      AUTOFIX_BOT_EMAIL: autofix-bot@ooples.com
 
     steps:
       - name: Checkout code
@@ -274,9 +285,16 @@ jobs:
           git_commit_gpgsign: true
 
       - name: Configure Git
+        env:
+          AUTOFIX_PAT: ${{ secrets.AUTOFIX_PAT }}
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          if [ -n "$AUTOFIX_PAT" ]; then
+            git config user.name "$AUTOFIX_BOT_NAME"
+            git config user.email "$AUTOFIX_BOT_EMAIL"
+          else
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+          fi
 
       - name: Get dependabot commit
         id: get-commit
