--- a/.github/workflows/commitlint-fix.yml
+++ b/.github/workflows/commitlint-fix.yml
@@ -24,7 +24,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
@@ -231,7 +231,7 @@ jobs:
 
       - name: Comment on PR
         if: steps.check-commits.outputs.needs_fix == 'true'
-        uses: actions/github-script@v7
+        uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b # v7
         with:
           script: |
             await github.rest.issues.createComment({
@@ -268,7 +268,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v6
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
         with:
           ref: ${{ github.head_ref }}
           fetch-depth: 0
@@ -388,7 +388,7 @@ jobs:
 
       - name: Comment on PR
         if: steps.check-needs-fix.outputs.needs_fix == 'true'
-        uses: actions/github-script@v7
+        uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b # v7
         env:
           ORIGINAL_SUBJECT: ${{ steps.get-commit.outputs.first_line }}
           NEW_SUBJECT: ${{ steps.check-needs-fix.outputs.new_subject }}
@@ -400,16 +400,17 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
+
               body: [
-                '### 🤖 Dependabot Commit Message Fixed',
+                '### Dependabot Commit Message Fixed',
                 '',
                 "The commitlint check failed because the dependabot commit message didn't follow the required format.",
                 '',
-                '**Action taken** — Fixed the subject line to be lowercase.',
+                '**Action taken** - Fixed the subject line to be lowercase.',
                 '',
                 '**Original:** ' + '`' + originalSubject + '`',
                 '**Fixed:** ' + '`' + newSubject + '`',
                 '',
                 'The PR branch has been force-pushed with the fixed commit.'
-              ].join('\n')
+              ].join('\\n')
             });
