--- a/.github/workflows/dotnet-format-autofix.yml
+++ b/.github/workflows/dotnet-format-autofix.yml
@@ -28,12 +28,12 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5 # v4
         with:
           fetch-depth: 0
 
       - name: Setup .NET 8.0
-        uses: actions/setup-dotnet@v5
+        uses: actions/setup-dotnet@2016bd2012dba4e32de620c46fe006a3ac9f0602 # v5
         with:
           dotnet-version: '8.0.x'
 
@@ -90,7 +90,7 @@ jobs:
       - name: Create or update PR
         if: steps.changes.outputs.has_changes == 'true'
         id: pr
-        uses: actions/github-script@v7
+        uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b # v7
         with:
           script: |
             const owner = context.repo.owner;
@@ -155,7 +155,7 @@ jobs:
 
       - name: Request review and enable auto-merge
         if: steps.changes.outputs.has_changes == 'true' && steps.pr.outputs.pull_number != ''
-        uses: actions/github-script@v7
+        uses: actions/github-script@f28e40c7f34bde8b3046d885e986cb6290c5673b # v7
         env:
           PULL_NUMBER: ${{ steps.pr.outputs.pull_number }}
         with:
