--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -68,7 +68,15 @@ jobs:
       - name: Build for CodeQL (net8.0)
         run: dotnet build src/AiDotNet.csproj -c Release --no-restore -f net8.0
 
+      - name: Perform CodeQL Analysis (no SARIF upload for huge PRs)
+        if: github.event_name == 'pull_request' && github.event.pull_request.changed_files > 250
+        uses: github/codeql-action/analyze@5d4e8d1aca955e8d8589aabd499c5cae939e33c7 # v4
+        with:
+          category: "/language:csharp"
+          upload: never
+
       - name: Perform CodeQL Analysis
+        if: github.event_name != 'pull_request' || github.event.pull_request.changed_files <= 250
         uses: github/codeql-action/analyze@5d4e8d1aca955e8d8589aabd499c5cae939e33c7 # v4
         with:
           category: "/language:csharp"
